--- a/Views/Participants/Details.cshtml
+++ b/Views/Participants/Details.cshtml
@@ -52,6 +52,36 @@
         </dd>
 
     </dl>
+
+    <table class="table table-condensed table-responsive">
+        <tr>
+            <th>Course Title</th>
+            <th>Credits</th>
+            <th>Grade</th>
+        </tr>
+        @foreach (var enrollment in Model.Enrollment)
+        {
+    <tr>
+        <td>
+            <p>
+                @enrollment.Course.Title
+            </p>
+        </td>
+        <td>
+            <p>
+                @enrollment.Course.Credits
+            </p>
+        </td>
+        <td>
+            <p>
+                @enrollment.Grade
+            </p>
+        </td>
+    </tr>
+        }
+
+    </table>
+
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ParticipantId }) |
