--- a/Views/Enrollments/Create.cshtml
+++ b/Views/Enrollments/Create.cshtml
@@ -4,6 +4,62 @@
     ViewBag.Title = "Create";
 }
 
+<script>
+    $(function () {
+        $("#Participant_FirstName").autocomplete({
+            source: function (request, response) {
+                $.ajax({
+                    url: "/Enrollments/GetParticipants",
+                    dataType: "json",
+                    type: "POST",
+                    data: {
+                        term: request.term
+                    },
+                    success: function (data) {
+                        console.log(data);
+                        response($.map(data, function (participant) {
+                            return { label: participant.Name, value: participant.Name, id: participant.Id };
+                        }))
+                    }
+                });
+            },
+            minLength: 2,
+            select: function (event, query) {
+                console.log(query);
+                $("#ParticipantId").val(query.item.id);
+            }
+        });
+    });
+</script>
+
+    @*<script>
+        $(function () {
+            $("#Course_Id").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: "/Enrollments/GetCourses",
+                        dataType: "json",
+                        type: "POST",
+                        data: {
+                            term: request.term
+                        },
+                        success: function (data) {
+                            console.log(data);
+                            response($.map(data, function (item) {
+                                return { label: item.Name, value: item.Name, id: item.id };
+                            }))
+                        }
+                    });
+                },
+                minLength: 2,
+                select: function (event, query) {
+                    console.log(query);
+                    $("#CourseId").val(query.item.id);
+                }
+            });
+    });
+</script>*@
+
 <h2>Create</h2>
 
 
@@ -11,40 +67,32 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Enrollment</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Grade, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Grade, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Grade, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CourseId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CourseId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ParticipantId, "ParticipantId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ParticipantId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ParticipantId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+<div class="form-horizontal">
+    <h4>Enrollment</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" }) 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Course.CourseId, "CourseId", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @*@Html.DropDownList("CourseId", null, htmlAttributes: new { @class = "form-control" })*@
+            @Html.EditorFor(model => model.CourseId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ParticipantId, "ParticipantId", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model=>model.Participant.FirstName, new {htmlAttributes= new {@class = "form-control"}})
+            @Html.HiddenFor(model=> model.ParticipantId)
+            @Html.ValidationMessageFor(model => model.ParticipantId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
